fix(security): isolation inter-eglises — verrouillage API tenants au Super Admin plateforme
- TenantController: 7 endpoints hasAnyRole(ADMIN,PASTEUR) -> @authz.isPlatformSuperAdmin()
  (faille: tout admin/pasteur d eglise pouvait lister/modifier/supprimer TOUS les tenants)
- SuperAdminController.archiveTenant: ajout du @PreAuthorize manquant
- DataInitializer: seed idempotent du compte superadmin@discipolat.com (PLATFORM_SUPER_ADMIN)
- SuperAdminController: PUT /tenants/{id} (edition) + gestion isActive dans l upsert des plans
- Web: /admin/tenants passe en scope platform; dashboard super admin: boutons morts cables
  (nouveau tenant, edition, suspendre/reactivate, plans新建/modifier/desactiver)
- Mobile: /admin/tenants restreint aux roles PLATFORM_*, navigation plateforme dediee dans le drawer
- Recette: mvn test 1188 verts, tsc 0, vitest 321/321, flutter analyze 0 erreur